[project]
name = "z2k2"
version = "0.1.0"
description = "API server for selected social networks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "authlib>=1.3.0",
    "feedgen>=1.0.0",
    "python-dotenv>=1.0.0",
]
